# template-django-with-react

./: README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend-checks.yml  frontend-checks.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/api/: models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/common/: test_sample.py
backend/config/: settings.py  urls.py
backend/src/api/: urls.py  views.py
backend/src/common/: __init__.py
backend/src/config/: settings.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: TodoForm.tsx  TodoItem.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  form.tsx  navigation-menu.tsx  sidebar.tsx  toggle.tsx
frontend/src/lib/: api.ts
